--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html> 
 <html lang="pt-br">
     <head>
-        <title>Driven Eats</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie-edge"/>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="driveneats.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <title>Driven Eats</title>
     </head>
     <body>
         <div id="container">
@@ -131,7 +131,7 @@
                     </nav>
                 </section>
                 <footer>
-                <button onclick="fecharPedido()" data-test="order-btn" disabled>Selecione os 3 itens para fechar o pedido</button>
+                <button onclick="mandarPedido()" data-test="order-btn" disabled>Selecione os 3 itens para fechar o pedido</button>
                 </footer>
             </main>
 
